# SuperDeadLeaves

./: .gitignore  DeadLeaves_44235_shapes0_rmin0.00125_1024x1024.tif  README.md  SuperDeadLeaves.ipynb  SuperDeadLeaves.py  SuperDeadLeaves3D.ipynb  pyproject.toml
media/: DL_51212_rmin0.0025_rmax0.2_360x640.tif  SDL2_51212_rmin0.0025_rmax0.2_360x640.tif  SDL_51212_3-8_rmin0.0025_rmax0.2_360x640.tif  cell_SDL_51212_2-5_rmin0.03_rmax0.3_360x640.tif
src/SuperDeadLeaves/: SuperDeadLeaves.py  SuperDeadLeaves3D.py  __init__.py  superdeadleaves.py
